--- a/templates/admin/admin_home.html
+++ b/templates/admin/admin_home.html
@@ -579,7 +579,7 @@ margin-left: 100px; */
                         <div class="nav__items">
                           <div class="nav__dropdown">
                             <a href="#refer" class="nav__link">
-                                <i class='bx bx-navigation nav__icon' ></i>
+                                <i class='bx bx-upload nav__icon' ></i>
                                 <span class="nav__name">Upload</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                             </a>
@@ -596,9 +596,9 @@ margin-left: 100px; */
                             </div>
                           </div>
 
-                                             <div class="nav__dropdown">
+                                             <!-- <div class="nav__dropdown">
                             <a href="#refer" class="nav__link">
-                                <i class='bx bx-navigation nav__icon' ></i>
+                                <i class='bx bx-revision nav__icon' ></i>
                                 <span class="nav__name">Update</span>
                                 <i class='bx bx-chevron-down nav__icon nav__dropdown-icon'></i>
                             </a>
@@ -611,12 +611,16 @@ margin-left: 100px; */
                                     
                                 </div>  
                             </div>
-                          </div>
+                          </div> -->
 
 
                              <a href="{% url 'admin_offering' %}" class="nav__link">
                                 <i class='bx bx-tag-alt nav__icon' ></i>
                                 <span class="nav__name"> View Offerings</span>
+                            </a>
+                              <a href="{% url 'view_enrolled_students_via_degree' %}" class="nav__link">
+                                <i class='bx bx-tag-alt nav__icon' ></i>
+                                <span class="nav__name"> View Enrolled Students </span>
                             </a>
 
 
@@ -663,11 +667,9 @@ margin-left: 100px; */
       <figure>
           <img src="https://usjr.edu.ph/wp-content/uploads/2020/09/USJ-R-online-2.png" alt="Slider">
           <img src="https://sscrmnl.edu.ph/wp-content/themes/sscr-manila/library/images/usjr_gc.jpg" alt="Slider">
-          <img src="https://scontent.fceb1-2.fna.fbcdn.net/v/t1.6435-9/178639572_301052578273148_660433796182069109_n.jpg?stp=dst-jpg_s960x960&_nc_cat=109&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ZY6EPPsGzKQAX9fOnTm&_nc_ht=scontent.fceb1-2.fna&oh=00_AT_XBNRBuj0Tol7KjtFH75K0rbXtHbkHLY7xlZglxMcsIA&oe=626A1510" alt="Slider">
+          <img src="https://usjr.edu.ph/wp-content/uploads/2021/04/scs-square_logo-600x600-1.png" alt="Slider">
           <img src="https://usjr.edu.ph/wp-content/uploads/2021/01/LANDING-page-header-400-2.jpg" alt="Slider">
-          <img src="https://scontent.fceb1-2.fna.fbcdn.net/v/t1.15752-9/118773621_253782375689778_6340205554738152846_n.png?stp=dst-png_p1080x2048&_nc_cat=100&ccb=1-5&_nc_sid=ae9488&_nc_eui2=AeGyhw2dTgmdLk_Ak5DgjhEBolDuXsf9B_2iUO5ex_0H_Ti5vZFUd4BLshn5Z5wFyu_yC5Em8Z9hetftIGF4qQtU&_nc_ohc=cmWgC8z_2gUAX-kidQv&_nc_ht=scontent.fceb1-2.fna&oh=03_AVLRDOqFvVEgoDqlL3eN-Jx-rVlWcs_a3vi5F6gKjs-2cQ&oe=62695016" alt="Slider">
- 
-          
+          <img src="https://scontent.fceb1-2.fna.fbcdn.net/v/t1.6435-9/178639572_301052578273148_660433796182069109_n.jpg?stp=dst-jpg_s960x960&_nc_cat=109&ccb=1-5&_nc_sid=e3f864&_nc_ohc=ZY6EPPsGzKQAX9fOnTm&_nc_ht=scontent.fceb1-2.fna&oh=00_AT_XBNRBuj0Tol7KjtFH75K0rbXtHbkHLY7xlZglxMcsIA&oe=626A1510" alt="Slider">  
       </figure>
   </div>
 
