--- a/templates/student/student_edit_profile_view.html
+++ b/templates/student/student_edit_profile_view.html
@@ -1,163 +1,10 @@
-<!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <!--========== BOX ICONS ==========-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-        <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Sawarabi Gothic">
-
-        <!--========== CSS ==========-->
-        <!-- <link rel="stylesheet" href="assets/css/styles.css"> -->
-        <style>
-            /*========== GOOGLE FONTS ==========*/
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
-
-/*========== VARIABLES CSS ==========*/
-:root {
-  --header-height: 3.5rem;
-
-  /*========== Colors ==========*/
-  --first-color: #4863A0;
-  --first-color-light: #F4F0FA;
-  --title-color: #19181B;
-  --text-color: #58555E;
-  --navtext-color: #FFFFFF;
-  --text-color-light: #A5A1AA;
-  --body-color: #d8c090;
-  --nav-color: #98b4ac;
-  --container-color: #FFFFFF;
-  --card-color: #F9F6FD;
-  --main1-color: #d8c090;
-  --dropdown: #4863A0;
-  --header-color: #98b4ac;
-
-
-  /*========== Font and typography ==========*/
-  --body-font: 'Poppins', sans-serif;
-  --normal-font-size: .938rem;
-  --small-font-size: .75rem;
-  --smaller-font-size: .75rem;
-
-  /*========== Font weight ==========*/
-  --font-medium: 500;
-  --font-semi-bold: 600;
-
-  /*========== z index ==========*/
-  --z-fixed: 100;
-}
-
-@media screen and (min-width: 1024px) {
-  :root {
-    --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
-  }
-}
-
-/*========== BASE ==========*/
-*, ::before, ::after {
-  box-sizing: border-box;
-}
-
-body {
-  margin: var(--header-height) 0 0 0;
-  padding: 1rem 1rem 0;
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-  color: var(--text-color);
- overflow-y: auto;
-}
-
-h3 {
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-img {
-  max-width: 10%;
-  height: auto;
-}
-
-/*========== HEADER ==========*/
-.header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: var(--header-color);
-  box-shadow: 0 1px 0 rgba(22, 8, 43, 0.1);
-  padding: 0 1rem;
-  z-index: var(--z-fixed);
-}
-
-.header__container {
-  display: flex;
-  align-items: center;
-  height: var(--header-height);
-  justify-content: space-between;
-}
-
-.header__img {
-  width: 35px;
-  height: 35px;
-  border-radius: 5%;
-}
-
-.header__logo {
-  color: var(--title-color);
-  font-weight: var(--font-medium);
-  display: none;
-}
-.header__input::placeholder {
-  font-family: var(--body-font);
-  color: var(--text-color);
-}
-
-
-
-/* ========== MEDIA QUERIES ==========*/
-/* For small devices reduce search*/
-@media screen and (max-width: 320px) {
-  .header__search {
-    width: 70%;
-  }
-  .card1{
-    width: 70%;
-  }
-}
-/* @media screen { 
-  .divNotif{
-      margin: var(--header-height) 0 0 0 0 0 auto;
-        max-width: 85%;
-        width: 960px;
-  }
-} */
-@media screen and (min-width: 768px) {
-  body {
-    padding: 1rem 3rem 0 6rem;
-  }
-  .header {
-    padding: 0 3rem 0 6rem;
-  }
-  .header__container {
-    height: calc(var(--header-height) + .5rem);
-  }
-  .header__logo {
-    display: block;
-  }
-  .header__img {
-    width: 40px;
-    height: 40px;
-    order: 1;
-  }
-}
-/* 
+{% extends "student/student_home.html" %}
+{% block title %} 
+Notifications
+{% endblock %} 
+{% block content %}
+<style>
+   /* 
 =========================== NEW CSS ======================================================= */
 
 /*===== CONTENT CONTENT =====*/
@@ -226,6 +73,7 @@ margin-bottom:15px;
 }
 .bText{
   color: #000;
+  font-size: 18.5px;
 }
 .form-field{
   height: 900px;
@@ -258,86 +106,86 @@ margin-bottom:15px;
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-  border-radius: 20px;
-  font-size: 15px;
+  /* border-radius: 20px; */
+  font-size: 18px;
 }
 #id_lastname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-  border-radius: 20px;
+  /* border-radius: 20px; */
   text-align: start;
-  font-size: 15px;
+  font-size: 18px;
 }
 #id_student_email{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-  border-radius: 20px;
-  font-size: 15px;
+  /* border-radius: 20px; */
+  font-size: 18px;
 }
 #id_year{
   width: 200px;
   height: 30px;
   text-align: center;
   color: #3A3B3C;
-  border-radius: 20px;
-  font-size: 15px;
+  /* border-radius: 20px; */
+  font-size: 18px;
 }
 #id_studnumber{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-  border-radius: 20px;
-  font-size: 15px;
+  /* border-radius: 20px; */
+  font-size: 18px;
 }
 #id_mother_firstname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_mother_lastname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_mother_contact_number{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_address{
   width: 180px;
   height: 22px;
   color: #3A3B3C;
-  font-size: 15px;
+  font-size: 18px;
 }
 #id_father_firstname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_father_lastname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_father_contact_number{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_parents_email{
   width: 180px;
@@ -348,29 +196,29 @@ margin-bottom:15px;
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_guardian_lastname{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_guardian_contact_number{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+    font-size: 18px;
 }
 #id_student_contact_number{
   width: 400px;
   height: 35px;
   color: #3A3B3C;
-    border-radius: 20px;
-    font-size: 15px;
+    /* border-radius: 20px; */
+  font-size: 18px;
 }
 
 
@@ -399,44 +247,48 @@ margin-bottom:15px;
   color: #fff;
   transform: translateY(-7px);
 }
+  .message {
+    margin: 0 auto;
+    width: 300px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    }
+  .parent_form{
 
-    </style>
+    column-gap: 10rem;
+  }
+  </style>
 
-        <title>Follow App Director</title>
-    </head>
-    <body>
-        <!--========== HEADER ==========-->
-        <header class="header">
-            <div class="header__container">
-                <img style="height:50px; " src="https://1.bp.blogspot.com/-zssvz_H77as/YSdIaUUbIbI/AAAAAAAAAf0/xhPKHM0G8dczMa5vP7MPCZvNVeZQkpKgACLcBGAsYHQ/w945-h600-p-k-no-nu/logo3.png"></img>
-                <a style="font-weight: bold;margin-right:  auto; color: #FFFFFF;  font-family: 'Sawarabi Gothic', serif; 
-                letter-spacing: 2px;" 
-                href="#" class="header__logo">FOLLOW APP</a>
-      <div>
-                              <p style="font-weight: bold; color: #FFFFFF;">Student Info Registration</p>
-                               
-                                   </div>
-            </div>
-        </header>
-        <!--========== CONTENTS HOME ==========-->
-          
-
-          {% block content %} 
-          
           <div class="fac">
-            <button type="submit" class="buttonF"><i style="margin: auto;">Please fill in the credentials below</i></button>
+            <button type="submit" class="buttonF"><p style="margin: auto;">Edit Profile</p></button>
           </div>
-          <br>
-          <br>
-         
-            <form action="#" class="cleanForm" method="POST">
+<br> <br>
+<div style="text-align: center">
+       {% for message in messages %}
+     <button type="submit" class="message"><p><b>{{message}} !</b></p></button>
+     {% endfor %}
+</div>
+<div class="parent_form">
+              <form action="#" class="cleanForm" method="POST">
               {% csrf_token %}
            
               
             <div class="column">
               
               <div class="row">    
-                <p><h3>Student's Personal Information</h3></p>
+                <p style=""><h3>Student's Personal Information</h3></p>
                 <p class="pText"><b class="bText">First Name: </b>{{info.firstname}}</p> 
                 <p class="pText"><b class="bText" >Last Name: &nbsp;</b>{{info.lastname}}</p> 
                 <p class="pText"><b class="bText" >Student Number: &nbsp;</b>{{info.studnumber}}</p> 
@@ -486,8 +338,9 @@ margin-bottom:15px;
                 </div>
             </form>
       
-        
+</div>  
           <br> <br> <br>
-          {% endblock %} 
-    </body>
-</html>
+        
+{% endblock %}
+
+
