--- a/templates/counselor/feedback_student.html
+++ b/templates/counselor/feedback_student.html
@@ -4,21 +4,26 @@
 
 {% block content %} 
 <style>
+.card1 {
+   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 95%;
+  min-height: 500px;
+  border-radius: 5px;
 
-  .login_btn {
-		width: 100%;
-		background: #d8c090!important;
-		color: white !important;
-	}
-
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
-
-	.login_container {
-		padding: 0 2rem;
-	}
+margin: auto;
+  text-align: center; 
+  overflow: hidden;
+  background-color:whitesmoke;
+}
+@media screen and (max-width: 320px) {
+  .header__search {
+    width: 70%;
+  }
+  .card1{
+    width: 70%;
+  }
+}
 
   button {
     width: 50%;
@@ -118,6 +123,24 @@ margin-bottom:15px;
   color: #fff;
   transform: translateY(-7px);
 }
+    .message {
+    margin: 0 auto;
+    width: 350px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    }
 
   </style>
   
@@ -131,11 +154,13 @@ margin-bottom:15px;
 
 
     
-          {% for message in messages %}
-    <center><b> <p>{{message}} !</p></b></center>
+<br>
+<div>
+       {% for message in messages %}
+     <button type="submit" class="message"><b>{{message}} !</b></button>
      {% endfor %}
-  
-
+</div>
+     <br> <br> 
         <div class="column">
           <div class="row">     
             <p class="pText"><b class="bText">Date Referred: &nbsp;</b> {{info.created_at}}</p> 
@@ -172,5 +197,6 @@ margin-bottom:15px;
     </form>
 
 </div>
+<br>
    
 {% endblock %}
