--- a/templates/director/offering.html
+++ b/templates/director/offering.html
@@ -1,6 +1,8 @@
 {% extends "director/director_home.html" %}
 
-
+{% block title %} 
+Schedule
+{% endblock %} 
 
 {% block content %} 
 <style>
@@ -8,8 +10,7 @@
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   width: 600px;
-  min-height: 530px;
-  /* height: 300px; */
+  height: 300px;
   border-radius: 5px;
   background-color: #98b4ac;
   float: center;
@@ -35,7 +36,16 @@ margin: auto;
  float:center;
  text-align: left;
 }
+.column1{
 
+  margin: 112px;
+
+}
+.row1{
+
+  margin: 112px;
+
+}
 
 /* BUTTONS */
 .wrap {
@@ -50,7 +60,7 @@ margin: auto;
   width: 140px;
   height: 30px;
   font-family: 'Roboto', sans-serif;
-  font-size: 12px;
+  font-size: 11px;
   text-transform: uppercase;
   letter-spacing: 2.5px;
   font-weight: 500;
@@ -71,6 +81,9 @@ margin: auto;
   color: #fff;
   transform: translateY(-7px);
 }
+.bText{
+  color: #fff;
+}
 .fac{
   display: flex;
   align-items: center;
@@ -80,6 +93,7 @@ margin: auto;
 
 .buttonF {
   position: fixed;
+
 width: 100%;
 min-width: 1320px;
 height: 60px;
@@ -96,71 +110,44 @@ box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 transition: all 0.3s ease 0s;
 cursor: pointer;
 outline: none;
-  }
 
-.bText{
-  color: #fff;
-}
-#id_program_designation{
-  width: 230px;
-  text-align: left;
-  font-size: 16px;
-  margin: auto;
-}
-    .message {
-    margin: 0 auto;
-    width: 455px;
-    height: 45px;
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #fff;
-    background-color: #3c3c5c;
-    border: none;
-    border-radius: 10px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    }
-</style>
+  }
+  </style>
 
 <div class="fac">
-  <button type="submit" class="buttonF">Assign Employee</button>
+
+  <button type="submit" class="buttonF"><b>View Offering</b></button>
 </div> 
-
-<br> <br>
-<div style="text-align: center">
-       {% for message in messages %}
-     <button type="submit" class="message"><b>{{message}} !</b></button>
-     {% endfor %}
-</div>
-     <br>
-
+<br> <br> 
 <div class="offering">
-
-
   <form method="POST" action="">
     {% csrf_token %}
-   
-        <p class="pText"><b class="bText">First Name: &nbsp;</b> {{form1.firstname}}</p>
-        <p class="pText"><b class="bText">Last Name: &nbsp;</b>  {{form1.lastname}}</p>
-        <p class="pText"><b class="bText">Program Designation: &nbsp;</b> {{form1.program_designation}}</p>
+    
+    <div class="column">
+      <div class="row"> 
+        <p class="pText"><b class="bText">Choose Semester: &nbsp;</b> {{form.semester}}</p>
+        <p class="pText"><b class="bText">School Year: &nbsp;</b>  {{form.school_year}}</p>
         &nbsp;    &nbsp;   
+      </div>
      
+      </div>
+    <br> <br> 
+    <div class="column1">
+      <div class="row1"> 
+        <div class="wrap">
           <button type="submit" class="button">Submit</button>
-        <br>
+        </div>
+      </div>
+     
+      </div>
+<br>
 </form>
 
+{% for message in messages %}
+                    <center> <b><p>{{message}} !</p></b> </center>   
+                {% endfor %}
+  
+                  
   </div>
-  <br>
-
-
 
 {% endblock %}
-
-
-
-
