--- a/templates/student/schedule.html
+++ b/templates/student/schedule.html
@@ -9,34 +9,6 @@ Schedule
 
 <style>
 
-  .login_btn {
-		width: 100%;
-		background: #d8c090!important;
-		color: white !important;
-	}
-
-	.login_btn:focus {
-		box-shadow: none !important;
-		outline: 0px !important;
-	}
-
-	.login_container {
-		padding: 0 2rem;
-	}
-
-  button {
-    width: 50%;
-    margin-left: 450px;
-    background-color: #d8c090;
-    border-radius: 20px;
-    border: 1px solid #98b4ac;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
-}
 
 form.cleanForm {
 min-width: auto;
@@ -57,29 +29,18 @@ margin-bottom:15px;
 }
 .row{
  min-width: none;
+ /* float:left;
+ text-align: left; */
+  margin-right: 10px;
+ margin-right: auto;
+ margin-left: auto;
+}
+.students_information{
+   min-width: none;
  float:left;
-
  text-align: left;
- 
-
-}
-.row1{
- width: 450px;
- float:left;
- margin-left: 250px;
- text-align: left;
-
-}
-.row2{
- width: 550px;
- float:left;
- margin-left: 400px;
 }
 
-.last{
- margin:0;
- padding: 10px;   
-}
 .pText{
   font-weight: 600;
   justify-content: center;
@@ -92,6 +53,8 @@ margin-bottom:15px;
   width: 600px;
 }
 #id_reasons{
+  margin-left: auto;
+  margin-right: auto;
   width: 1010px;
     height: 200px;
     overflow-y: scroll;
@@ -111,83 +74,7 @@ margin-bottom:15px;
     height: 30px;
     color: #000;
 }
-.buttons{
-  margin-left: auto;
-  width: 200px;
-  height: auto;
-  border: 5em;
-  cursor: pointer;
-  outline: none;
-  font-size: 16px;
-  -webkit-transform: translate(0);
-  transform: translate(0);
-  background-image: linear-gradient(45deg, #98b4ac, #d8c090);
-  padding: 0.7em 2em;
-  border-radius: 65px;
-  box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
-  -webkit-transition: box-shadow 0.25s;
-  transition: box-shadow 0.25s;
-  color: white;
-}
-.buttons .text {
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #d8c090, #98b4ac);
-}
 
-.buttons:after {
-  content: "";
-  border-radius: 18px;
-  position: absolute;
-  margin: 4px;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  z-index: -1;
-  background: #E5E4E2;
-}
-
-.buttons:hover {
-  background-image: linear-gradient(-45deg, #98b4ac, #d8c090);
-  box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-}
-
-.buttons:hover .text {
-  background-image: linear-gradient(-45deg, #d8c090, #98b4ac);
-}
-.table-head{
-  
-    background: #E5E4E2;
-    box-shadow: none;
-    color: #fff;
-    font-weight: 600;
-    line-height: 5px;
-      box-shadow: 0 1px 4px 0px rgba(0,0,50,0.3);
-      width: 500px;
-      margin:auto;
-      border-radius: 20px;
-}
-.table-head .table-cell{
-    border-right: none;
-}
-.table-cell{
-    display: table-cell;
-    width: 20%;
-    text-align: center;
-    padding: 4px 0;
-    border-right: 1px solid #838996;
-    vertical-align: middle;
-}
-.first-cell{
-    text-align: left;
-    padding-left: 10px;
-    width: 8%;
-}
-.last-cell{
-    border-right: none;
-    width: 15px;
-}
 p{
   font-size: 17px;
   color: black;
@@ -289,6 +176,39 @@ outline: none;
   color: #fff;
   transform: translateY(-7px);
 }
+    .message {
+    margin: 0 auto;
+    width: 390px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    }
+    .card1 {
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  width: 80%;
+  height: 660px;
+  border-radius: 5px;
+  background-color: var(--container-color); 
+  float: center;
+  margin-top: 10px;
+  margin-bottom: 35px;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  overflow-y: scroll;
+}
 </style>
   <div class="fac">
     <button class="buttonF">Set Schedule for Counseling</button>
@@ -298,17 +218,22 @@ outline: none;
 <div class="card1">
   <form action="#" class="cleanForm" method="POST">
      
-          {% for message in messages %}
-  <center><b><p>{{message}} !</p></b></center>
+<br>
+<div style="text-align: center">
+       {% for message in messages %}
+     <button type="submit" class="message"><b>{{message}} !</b></button>
      {% endfor %}
-
+</div>
      <br>
         <div class="row">     
-          <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
+<!-- <div class="students_information">
+            <p class="pText"><b class="bText">Student Number: &nbsp;</b>  {{schedform.studnumber}}</p> 
           <p class="pText"><b class="bText" >Student's Last Name: &nbsp;</b> {{schedform.lastname}}</p> 
           <p class="pText"><b class="bText" >Student's First Name: &nbsp;</b> {{schedform.firstname}}</p> 
+</div> -->
 
-         
+         pangitag encouraging essay or wuootes nga mabutang nimo diri nga maakit nimo si stsudent
+         nga mo open up kang counselor
       <form method="POST" action=""> 
             {% csrf_token %}
            <i><h4 style="font-size: 16px; color: #4C4646;" >Input the Reasons below to Set a Schedule for Referral:</h4> </i>
@@ -317,8 +242,6 @@ outline: none;
     <div class="wrap">
       <button type="submit" class="button"><b>Submit</b></button>
     </div>
-          <!-- <button class="buttons" type="submit" style="font-weight: bold; color: #454545;">Submit</button> -->
-          <!-- // E TUPONG ANG BUTTON OG TITLE IF EITHER LAPTOP OR MONITOR // -->
           </form>
 
         </div>
