--- a/templates/teacher/info_referred_student.html
+++ b/templates/teacher/info_referred_student.html
@@ -345,15 +345,14 @@ outline: none;
 .card1 {
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  width: 40%;
+  width: 42%;
   min-height: 515px;
   border-radius: 5px;
-  margin-left: 500px;
-
+  flex-direction: column;
 /* margin: auto;
   text-align: center; */
   overflow: hidden;
-
+  background-color: whitesmoke;
 }
 @media screen and (max-width: 320px) {
   .header__search {
@@ -413,6 +412,30 @@ outline: none;
   text-overflow: ellipsis; 
   margin-left: 60px;
 }
+.parent_div{
+  display: flex;
+  flex-direction: row;
+  column-gap: 4rem;
+  margin-left: 6rem;
+}
+    .message {
+    margin: 0 auto;
+    width: 350px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #fff;
+    background-color: #3c3c5c;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    }
 
 </style>
 {% for object in object_list  reversed %}
@@ -421,11 +444,15 @@ outline: none;
   <button type="submit" class="buttonF">Information of Referred Student</button>
 </div> 
 <br> <br>
-{% if not object_list %}
-No Referred Students yet!
-{% endif %}
-<br> 
-<div class="card1">
+<div style="text-align: center">
+       {% for message in messages %}
+     <button type="submit" class="message"><p><b>{{message}} !</b></p></button>
+     {% endfor %}
+</div>
+     <br> <br> 
+
+<div class="parent_div">
+  <div class="card1 ">
   <form action="#" class="cleanForm" method="POST">
     <br>
              <div>
@@ -440,12 +467,27 @@ No Referred Students yet!
     </p>
     </div>    
     </form>
+</div>
+<br>
+<div class="card1">
+        <form action="#" class="cleanForm" method="POST">
+          {% if object.feedback  %}
+    <br>
+             <div>
+               <h3 style="text-align: justify; margin-left:8px; font-size: 20px;"><i>Feedback</i></h3>
+    <p class="rowText">
+      <i>Feedback stated below:</i>
+    <div class="scroll-box">
+<p class="Pbox" style="text-align: justify; margin-left:8px;"><b> {{object.feedback}}</b></p>
+</div>
+    </p>
+    </div>    
 
-    {% if object.feedback  %}
-  naa na siyay feedback mao ni sya
-    {{object.feedback}}
-    {% endif %}
-    
+       {% else %}
+       walay pay feedback siztt pag huwat
+       {% endif %}
+    </form>
+</div>
 </div>
    {% endfor %}
                
